# ChangeLog for sys-auth/consolekit
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-auth/consolekit/ChangeLog,v 1.69 2010/07/20 15:04:54 jer Exp $

  20 Jul 2010; Jeroen Roovers <jer@gentoo.org> consolekit-0.4.1.ebuild:
  Stable for HPPA (bug #314899).

  04 Jun 2010; Markus Meier <maekke@gentoo.org> consolekit-0.4.1.ebuild:
  x86 stable, bug #314899

  09 May 2010; Raúl Porcel <armin76@gentoo.org> consolekit-0.3.0-r2.ebuild:
  sh stable

  03 May 2010; Olivier Crête <tester@gentoo.org> consolekit-0.4.1.ebuild:
  amd64 stable, bug #314899

  25 Apr 2010; Raúl Porcel <armin76@gentoo.org> consolekit-0.3.0-r2.ebuild,
  consolekit-0.4.1.ebuild:
  Add ~sh

  13 Apr 2010; Alexis Ballier <aballier@gentoo.org> consolekit-0.4.1.ebuild:
  keyword ~x86-fbsd

  30 Mar 2010; Jonathan Callen <abcd@gentoo.org> consolekit-0.3.0-r2.ebuild,
  consolekit-0.4.1.ebuild:
  Bump to EAPI=3, add prefix keywords

  28 Feb 2010; Raúl Porcel <armin76@gentoo.org> consolekit-0.4.1.ebuild:
  Add ~alpha/~arm/~ia64/~sparc

  17 Feb 2010; Gilles Dartiguelongue <eva@gentoo.org>
  consolekit-0.4.1.ebuild:
  Raise dbus-glib dependency, bug #298924.

  16 Feb 2010; Joseph Jezak <josejx@gentoo.org> consolekit-0.4.1.ebuild:
  Marked ~ppc/~ppc64 for bug #296548.

  06 Jan 2010; Jeroen Roovers <jer@gentoo.org> consolekit-0.4.1.ebuild:
  Marked ~hppa (bug #296548).

*consolekit-0.4.1 (29 Oct 2009)

  29 Oct 2009; Gilles Dartiguelongue <eva@gentoo.org> files/90-consolekit,
  -consolekit-0.2.3.ebuild, -files/consolekit-0.2.3-freebsd.patch,
  -consolekit-0.2.10.ebuild, -consolekit-0.2.10-r1.ebuild,
  -consolekit-0.3.0.ebuild, +files/consolekit-0.4.0-multilib.patch,
  +files/consolekit-0.4.0-polkit-automagic.patch, +consolekit-0.4.1.ebuild,
  +files/consolekit-0.4.1-shutdown-reboot-without-policies.patch:
  New version for GNOME 2.28. Clean up old revision. Fix xinitrc script.
